testdata/invalid/huge_shift_count.hzn
package probes

@tracepoint("sched:sched_process_exec")
func OnExec(ctx tracepoint.Exec) i32 {
    value := u32(1) << 18446744073709551615
    if value == 0 {
        return 0
    }
    return 0
}
